assignment-3/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from c:\Users\84865\Documents\HCMUT-cse20\principles-prog-languages\assignment-3\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'preventDefault'", "'super'", "'printString'", 
                     "'readString'", "'printBoolean'", "'writeFloat'", "'readFloat'", 
                     "'printInteger'", "'readInteger'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'integer'", "'void'", "'array'", "'float'", "'return'", 
                     "'out'", "'boolean'", "'for'", "'string'", "'continue'", 
                     "'do'", "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'::'", "'.'", "','", "';'", "'='", "':'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "PREVENTDEFAULT", "SUPER", "PRINTSTRING", 
                      "READSTRING", "PRINTBOOLEAN", "WRITEFLOAT", "READFLOAT", 
                      "PRINTINTEGER", "READINTEGER", "COMMENT", "INTLIT", 
                      "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "AUTO", "BREAK", 
                      "INTEGER", "VOID", "ARRAY", "FLOAT", "RETURN", "OUT", 
                      "BOOLEAN", "FOR", "STRING", "CONTINUE", "DO", "FUNCTION", 
                      "OF", "ELSE", "IF", "WHILE", "INHERIT", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "LESS", "GREATER", "LTE", "GTE", 
                      "NOT", "AND", "OR", "EQUAL_TO", "NOT_EQUAL", "CONCAT", 
                      "PERIOD", "COMMA", "SEMI", "EQUAL", "COLON", "LB", 
                      "RB", "LSB", "RSB", "LCB", "RCB", "IDENTIFIER", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_arraytype = 2
    RULE_number = 3
    RULE_eletype = 4
    RULE_dimension = 5
    RULE_vardecl = 6
    RULE_vardeclNoEq = 7
    RULE_vardeclEq = 8
    RULE_assignment = 9
    RULE_arraylit = 10
    RULE_idlist = 11
    RULE_exprlist = 12
    RULE_parameter = 13
    RULE_expr = 14
    RULE_expr1 = 15
    RULE_compare = 16
    RULE_expr2 = 17
    RULE_expr3 = 18
    RULE_expr4 = 19
    RULE_expr5 = 20
    RULE_expr6 = 21
    RULE_expr7 = 22
    RULE_expr8 = 23
    RULE_factor = 24
    RULE_arrayCell = 25
    RULE_funccall = 26
    RULE_stmt = 27
    RULE_stmtlocal = 28
    RULE_assignStmt = 29
    RULE_lhs = 30
    RULE_ifStmt = 31
    RULE_forStmt = 32
    RULE_initExpr = 33
    RULE_conditionExpr = 34
    RULE_operator = 35
    RULE_updateExpr = 36
    RULE_whileStmt = 37
    RULE_doWhileStmt = 38
    RULE_callStmt = 39
    RULE_blockStmt = 40
    RULE_stmtTerm = 41
    RULE_stmtList = 42
    RULE_breakStmt = 43
    RULE_continueStmt = 44
    RULE_returnStmt = 45
    RULE_funcdecl = 46
    RULE_inheritance = 47
    RULE_paramterList = 48
    RULE_paramterListTerm = 49
    RULE_returnType = 50
    RULE_sfuncdecl = 51
    RULE_readInteger = 52
    RULE_printInteger = 53
    RULE_readFloat = 54
    RULE_writeFloat = 55
    RULE_printBoolean = 56
    RULE_readString = 57
    RULE_printString = 58
    RULE_superCall = 59
    RULE_preventDefault = 60

    ruleNames =  [ "program", "decls", "arraytype", "number", "eletype", 
                   "dimension", "vardecl", "vardeclNoEq", "vardeclEq", "assignment", 
                   "arraylit", "idlist", "exprlist", "parameter", "expr", 
                   "expr1", "compare", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr8", "factor", "arrayCell", "funccall", 
                   "stmt", "stmtlocal", "assignStmt", "lhs", "ifStmt", "forStmt", 
                   "initExpr", "conditionExpr", "operator", "updateExpr", 
                   "whileStmt", "doWhileStmt", "callStmt", "blockStmt", 
                   "stmtTerm", "stmtList", "breakStmt", "continueStmt", 
                   "returnStmt", "funcdecl", "inheritance", "paramterList", 
                   "paramterListTerm", "returnType", "sfuncdecl", "readInteger", 
                   "printInteger", "readFloat", "writeFloat", "printBoolean", 
                   "readString", "printString", "superCall", "preventDefault" ]

    EOF = Token.EOF
    PREVENTDEFAULT=1
    SUPER=2
    PRINTSTRING=3
    READSTRING=4
    PRINTBOOLEAN=5
    WRITEFLOAT=6
    READFLOAT=7
    PRINTINTEGER=8
    READINTEGER=9
    COMMENT=10
    INTLIT=11
    FLOATLIT=12
    BOOLEANLIT=13
    STRINGLIT=14
    AUTO=15
    BREAK=16
    INTEGER=17
    VOID=18
    ARRAY=19
    FLOAT=20
    RETURN=21
    OUT=22
    BOOLEAN=23
    FOR=24
    STRING=25
    CONTINUE=26
    DO=27
    FUNCTION=28
    OF=29
    ELSE=30
    IF=31
    WHILE=32
    INHERIT=33
    PLUS=34
    MINUS=35
    MUL=36
    DIV=37
    MOD=38
    LESS=39
    GREATER=40
    LTE=41
    GTE=42
    NOT=43
    AND=44
    OR=45
    EQUAL_TO=46
    NOT_EQUAL=47
    CONCAT=48
    PERIOD=49
    COMMA=50
    SEMI=51
    EQUAL=52
    COLON=53
    LB=54
    RB=55
    LSB=56
    RSB=57
    LCB=58
    RCB=59
    IDENTIFIER=60
    WS=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclsContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclsContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.decls()
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 127
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def eletype(self):
            return self.getTypedRuleContext(MT22Parser.EletypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraytype




    def arraytype(self):

        localctx = MT22Parser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arraytype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MT22Parser.ARRAY)
            self.state = 134
            self.match(MT22Parser.LSB)
            self.state = 135
            self.dimension()
            self.state = 136
            self.match(MT22Parser.RSB)
            self.state = 137
            self.match(MT22Parser.OF)
            self.state = 138
            self.eletype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(MT22Parser.FLOATLIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_number




    def number(self):

        localctx = MT22Parser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==MT22Parser.INTLIT or _la==MT22Parser.FLOATLIT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EletypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_eletype




    def eletype(self):

        localctx = MT22Parser.EletypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_eletype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimension




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimension)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(MT22Parser.INTLIT)
                self.state = 145
                self.match(MT22Parser.COMMA)
                self.state = 146
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclNoEq(self):
            return self.getTypedRuleContext(MT22Parser.VardeclNoEqContext,0)


        def vardeclEq(self):
            return self.getTypedRuleContext(MT22Parser.VardeclEqContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.vardeclNoEq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.vardeclEq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclNoEqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def eletype(self):
            return self.getTypedRuleContext(MT22Parser.EletypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclNoEq




    def vardeclNoEq(self):

        localctx = MT22Parser.VardeclNoEqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardeclNoEq)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.idlist()
            self.state = 155
            self.match(MT22Parser.COLON)
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.INTEGER, MT22Parser.FLOAT, MT22Parser.BOOLEAN, MT22Parser.STRING]:
                self.state = 156
                self.eletype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 157
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 160
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclEqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def assignment(self):
            return self.getTypedRuleContext(MT22Parser.AssignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def eletype(self):
            return self.getTypedRuleContext(MT22Parser.EletypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclEq




    def vardeclEq(self):

        localctx = MT22Parser.VardeclEqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardeclEq)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(MT22Parser.IDENTIFIER)
                self.state = 163
                self.match(MT22Parser.COMMA)
                self.state = 164
                self.assignment()
                self.state = 165
                self.match(MT22Parser.COMMA)
                self.state = 166
                self.expr()
                self.state = 167
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(MT22Parser.IDENTIFIER)
                self.state = 170
                self.match(MT22Parser.COLON)
                self.state = 173
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.AUTO, MT22Parser.INTEGER, MT22Parser.FLOAT, MT22Parser.BOOLEAN, MT22Parser.STRING]:
                    self.state = 171
                    self.eletype()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 172
                    self.arraytype()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 175
                self.match(MT22Parser.EQUAL)
                self.state = 176
                self.expr()
                self.state = 177
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def assignment(self):
            return self.getTypedRuleContext(MT22Parser.AssignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def eletype(self):
            return self.getTypedRuleContext(MT22Parser.EletypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_assignment




    def assignment(self):

        localctx = MT22Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(MT22Parser.IDENTIFIER)
                self.state = 182
                self.match(MT22Parser.COMMA)
                self.state = 183
                self.assignment()
                self.state = 184
                self.match(MT22Parser.COMMA)
                self.state = 185
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.match(MT22Parser.IDENTIFIER)
                self.state = 188
                self.match(MT22Parser.COLON)
                self.state = 191
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.AUTO, MT22Parser.INTEGER, MT22Parser.FLOAT, MT22Parser.BOOLEAN, MT22Parser.STRING]:
                    self.state = 189
                    self.eletype()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 190
                    self.arraytype()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 193
                self.match(MT22Parser.EQUAL)
                self.state = 194
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(MT22Parser.LCB)
            self.state = 201
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.PREVENTDEFAULT, MT22Parser.SUPER, MT22Parser.PRINTSTRING, MT22Parser.READSTRING, MT22Parser.PRINTBOOLEAN, MT22Parser.WRITEFLOAT, MT22Parser.READFLOAT, MT22Parser.PRINTINTEGER, MT22Parser.READINTEGER, MT22Parser.INTLIT, MT22Parser.FLOATLIT, MT22Parser.BOOLEANLIT, MT22Parser.STRINGLIT, MT22Parser.MINUS, MT22Parser.NOT, MT22Parser.LB, MT22Parser.LCB, MT22Parser.IDENTIFIER]:
                self.state = 199
                self.exprlist()
                pass
            elif token in [MT22Parser.RCB]:
                pass
            else:
                raise NoViableAltException(self)
